test/memory/shannon/freedWithoutMalloc.good
freedWithoutMalloc.chpl:1: error: Attempting to free memory that wasn't allocated
